@@ -50,7 +50,7 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
-					<argLine> ${failsafeArgLine} --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-opens=java.base/java.util.regex=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED -Djakarta.ws.rs.ext.RuntimeDelegate=org.apache.cxf.jaxrs.impl.RuntimeDelegateImpl -Djakarta.ws.rs.client.ClientBuilder=org.apache.cxf.jaxrs.client.spec.ClientBuilderImpl -Dorg.apache.cxf.bus.factory=org.knime.cxf.core.fragment.KNIMECXFBusFactory -Dorg.apache.cxf.transport.http.forceURLConnection=true </argLine>
+					<argLine> ${failsafeArgLine} ${knime.tycho.test.configuration} </argLine>
 				</configuration>
 			</plugin>
 		</plugins>
